--- a/movie-ticket-booking/src/component/AddMovieForm.css
+++ b/movie-ticket-booking/src/component/AddMovieForm.css
@@ -1,45 +1,60 @@
-.container-movie-form {
-    /* background-image: url('C:\Users\rajal\Desktop\FullStackProject\movie-ticket-booking\src\images\Movie_bg.jpg'); */
-    background-size: cover;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    margin-left: 0%;
-    
-  }
-  .form1{
-    width: 1000px;
-    height: 1000px;
-  }
-  .movie-form {
-    margin-bottom: 20px;
-  }
-  
-  .movie-label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .movie-input {
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 50%;
-  }
-  
-  .movie-button {
-    padding: 10px;
-    background-color: black;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .movie-button:hover {
-    background-color: #d22222;
-  }
-  
+.container1 {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  background-color: black;
+  background-image: url('../images/index.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.addmovie{
+  margin-left: 180px;
+  font-size: 27px;
+  margin-top: -15px;
+}
+.form1 {
+  margin-top: 50px;
+  width: 700px;
+  padding: 40px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  height: 500px;
+}
+
+.movie-form {
+  margin-bottom: 20px;
+}
+
+.movie-label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+
+}
+
+.movie-input {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 480px;
+}
+
+.movie-button {
+  padding: 10px;
+  background-color: black;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  margin-left: 0px;
+  cursor: pointer;
+  width: 500px
+}
+
+.movie-button:hover {
+  background-color: #d22222;
+}
