--- a/movie-ticket-booking/src/component/Login.css
+++ b/movie-ticket-booking/src/component/Login.css
@@ -25,7 +25,7 @@
     margin-bottom: 20px;
   }
   
-  input[type="text"],
+  input[type="email"],
   input[type="password"] {
     width: 100%;
     padding: 12px 20px;
